# Salus

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  bc  compile.sh  docker-compose.yml  docker-entrypoint.sh  executor.kdev4  iwyu.imp  requirements.txt
ci/: build.sh
protos/: CMakeLists.txt  executor.proto  route_guide.proto  tfoplibrary.proto
src/: CMakeLists.txt  config.h.in  executionengine.cpp  executor.cpp  greeter_client.cc  greeter_server.cc  helper.cpp  helper.h  ioplibrary.cpp  ioplibrary.h  main.cpp  profiler.h  protos.h  route_guide_client.cpp  route_guide_server.cpp  salus-server.list
src/cudahook/: CMakeLists.txt  cudahook.cpp  cudahook.h  functions.def  kernellaunches.cpp  kernellaunches.h  realdlsym.cpp  realdlsym.h
src/execution/: devices.cpp  devices.h  executionengine.cpp  executionengine.h  itask.cpp  itask.h  iterationtask.cpp  iterationtask.h  operationtask.cpp  operationtask.h  resources.cpp  resources.h
src/execution/engine/: allocationlistener.cpp  allocationlistener.h  iterationcontext.cpp  iterationcontext.h  resourcecontext.cpp  resourcecontext.h  taskexecutor.cpp  taskexecutor.h
src/execution/scheduler/: basescheduler.cpp  basescheduler.h  fairscheduler.cpp  fairscheduler.h  ischeduler.cpp  ischeduler.h  operationitem.cpp  operationitem.h  schedulingparam.cpp  schedulingparam.h  sessionitem.cpp  sessionitem.h
src/execution/scheduler/impl/: fair.cpp  fair.h  pack.cpp  pack.h  preempt.cpp  preempt.h
src/execution/threadpool/: EventCount.h  RunQueue.h  nonblockingthreadpool.cpp  threadpool.h
src/frameworks/: CMakeLists.txt
src/frameworks/tensorflow/: CMakeLists.txt  tensorflow_headers.h  tfexception.h  tfinstance.cpp  tfinstance.h  tfoplibraryv2.cpp  tfoplibraryv2.h  tfsession.cpp  tfsession.h  tfutils.cpp
src/frameworks/tensorflow/protos/: tfoplibrary.proto  tfoplibrary.protos.h
src/frameworks/tensorflow/v2/: exectask.cpp  exectask.h  md_executor.cpp  md_executor.h  md_executor_impl.cpp  md_executor_impl.h  peropallocdevice.cpp  peropallocdevice.h  tensorutils.cpp  tensorutils.h  tfallocator.cpp  tfallocator.h
src/frameworks/tensorflow/worker/: devicecontextwithdevice.h  dummysessionmgr.h  dummyworkercache.cpp  dummyworkercache.h  mdgraphmgr.cpp  mdgraphmgr.h  rendezvousmgr.cpp  rendezvousmgr.h  rendezvouswithhook.cpp  rendezvouswithhook.h
src/memorymgr/: memorymgr.cpp  memorymgr.h
src/oplibraries/: .tfoplibrary.h.kate-swp  ioplibrary.cpp  ioplibrary.h  tfdevice.cpp  tfdevice.h  tfoplibrary.cpp  tfoplibrary.h
src/oplibraries/tensorflow/: handlercallback.cpp  handlercallback.h  tensorflow_headers.h  tfexception.cpp  tfexception.h  tfinstance.cpp  tfinstance.h  tfoplibrary.cpp  tfoplibrary.h  tfoplibraryv2.cpp  tfoplibraryv2.h  tfsession.cpp  tfsession.h  tfutils.cpp  tfutils.h
src/oplibraries/tensorflow/device/: cpu.cpp  cpu.h  gpu.cpp  gpu.h  salusdevices.cpp  salusdevices.h  sessionallocator.cpp  sessionallocator.h  shadowdevices.cpp  shadowdevices.h
src/oplibraries/tensorflow/tfmocks/: tfallocator.h  tfdevice.cpp  tfdevice.h  tfrendezvous.cpp  tfrendezvous.h  tfsession.cpp  tfsession.h
src/oplibraries/tensorflow/tfmocksv2/: md_executor.cc  md_executor.h
src/oplibraries/tensorflow/v2/: costmgr.cpp  costmgr.h  exectask.cpp  exectask.h  graphview.cpp  graphview.h  itertask.cpp  itertask.h  local_wrapper_rendezvous.cpp  local_wrapper_rendezvous.h  md_executor.cpp  md_executor.h  md_executor_impl.cpp  md_executor_impl.h  md_rendezvous.cpp  md_rendezvous.h  mdgraphmgr.cpp  mdgraphmgr.h  peropallocdevice.cpp  peropallocdevice.h  tensorutils.cpp  tensorutils.h  tfallocator.cpp  tfallocator.h
src/oplibraries/tensorflow/v3/: si_executor.cpp  si_executor.h  si_executor_impl.cpp  si_executor_impl.h  si_executortask.cpp  si_executortask.h  sigraphmgr.cpp  sigraphmgr.h  smblocker.cpp  smblocker.h  tf_executor.cpp  tf_executor.h
src/oplibraries/tensorflow/worker/: devicecontextwithdevice.cpp  devicecontextwithdevice.h  dummysessionmgr.cpp  dummysessionmgr.h  dummyworkercache.cpp  dummyworkercache.h  mdgraphmgr.cpp  mdgraphmgr.h  rendezvousmgr.cpp  rendezvousmgr.h  rendezvouswithhook.cpp  rendezvouswithhook.h
src/oplibraries/tfmocks/: devicefactories.cpp  tfallocator.cpp  tfallocator.h  tfdevice.cpp  tfdevice.h  tfrendezvous.cpp  tfrendezvous.h  tfsession.cpp  tfsession.h
src/platform/: CMakeLists.txt  logging.cpp  logging.h  memory.cpp  memory.h  profiler.cpp  profiler.h  signals.h  thread_annotations.h
src/platform/crashhandler/: crashhandler.hpp  crashhandler_unix.cpp  crashhandler_windows.cpp  logcapture.cpp  logcapture.hpp  stacktrace_windows.cpp
src/platform/posix/: crashhandler.cpp  memory.cpp  signals.cpp  thread_annotations.cpp
src/platform/windows/: crashhandler.cpp  memory.cpp  signals.cpp  stacktrace.cpp  stacktrace.hpp
src/protoutils/: protoutils.cpp  protoutils.h
src/resources/: iteralloctracker.cpp  iteralloctracker.h  memorymgr.cpp  memorymgr.h  resources.cpp  resources.h
src/rpcserver/: grpcserver.cpp  grpcserver.h  iothreadpool.cpp  iothreadpool.h  irpcserver.cpp  irpcserver.h  rpcservercore.cpp  rpcservercore.h  zmqserver.cpp  zmqserver.h  zmqserver_p.h
src/salusbin/: CMakeLists.txt
src/salusbin/src/: main.cpp
src/saluslib/: CMakeLists.txt
src/saluslib/include/salus/: config.h.in  executor.protos.h
src/saluslib/src/execution/: devices.cpp  executionengine.cpp  operationtask.cpp  resources.cpp
src/saluslib/src/memorymgr/: memorymgr.cpp
src/saluslib/src/oplibraries/: ioplibrary.cpp
src/saluslib/src/platform/: logging.cpp
src/saluslib/src/protos/: executor.protos.cpp
src/utils/: CMakeLists.txt  containerutils.cpp  containerutils.h  cpp17.cpp  cpp17.h  date.h  debugging.cpp  debugging.h  envutils.cpp  envutils.h  fixed_function.hpp  macros.h  objectpool.cpp  objectpool.h  pointerutils.cpp  pointerutils.h  protoutils.cpp  protoutils.h  stringutils.cpp  stringutils.h  threadutils.cpp  threadutils.h  type_traits.h  zmqutils.cpp  zmqutils.h
src/wrapper/: CMakeLists.txt  salus-server.in
(+431 files in other folders)
